--- a/Frontend/maintenanceOfTrainingCertificates.html
+++ b/Frontend/maintenanceOfTrainingCertificates.html
@@ -4,134 +4,136 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="mainStyle.css">
    <link rel="stylesheet" href="trainingCertificateStyle.css">
-   <style>
-    table, th, td {
-      border:1px solid black;
-    }
-    </style>
    <body>
       <div class="trainingCertificate-wrapper">
          <form id="trainingCertificateForm" class="trainingCertificate-form">
             <label for="studentName">Name des/der Auszubildenen:</label>
             <input type="text" id="studentName" value="Adrian Zubi" readonly>
             <div class="flexbox">
-                <label for="trainingYear">Ausbildungsjahr:</label>
-                <input type="text" id="trainingYear" value="3">
-                <label for="department">Name des/der Auszubildenen:</label>
-                <input type="text" id="department" value="IT">
+               <label for="trainingYear">Ausbildungsjahr:</label>
+               <input type="number" id="trainingYear" value="3">
+               <label for="department">Name des/der Auszubildenen:</label>
+               <input type="text" id="department" value="IT">
             </div>
             <div class="flexbox">
-                <label for="trainingWeekStart">Ausbildungswoche vom:</label>
-                <input type="date" id="trainingWeekStart" value="2023-01-12">
-                <label for="trainingWeekEnd">bis:</label>
-                <input type="date" id="trainingWeekEnd" value="2023-01-18">
+               <label for="trainingWeekStart">Ausbildungswoche vom:</label>
+               <input type="date" id="trainingWeekStart" value="2023-01-12">
+               <label for="trainingWeekEnd">bis:</label>
+               <input type="date" id="trainingWeekEnd" value="2023-01-18">
             </div>
-            <table class="trainingCertificateTable" style="width: 100%;">
-                <colgroup>
-                  <col span="1" style="background-color: #D6EEEE">
-                </colgroup>
-                <tr>
-                  <th></th>
-                  <th>Ausgeführte Arbeiten, Unterricht usw.</th>
-                  <th>Einzelstunden</th>
-                  <th>Gesamtstunden</th>
-                  <th>Abteilung</th>
-                </tr>
-                <tr>
+            <table class="trainingCertificateTable">
+               <tr class="tableHeader">
+                  <th class="tableHeaderCell"></th>
+                  <th class="tableHeaderCell">Ausgeführte Arbeiten, Unterricht usw.</th>
+                  <th class="tableHeaderCell">Einzelstunden</th>
+                  <th class="tableHeaderCell">Gesamtstunden</th>
+                  <th class="tableHeaderCell">Abteilung</th>
+               </tr>
+               <tr class="tableContent">
                   <td class="tableWeekDay">Montag</td>
                   <td>
-                    <textarea type="text" placeholder="Hier ist deine Textbox"></textarea>
+                     <textarea class="trainingActivities" type="text" placeholder="Hier ist deine Textbox"></textarea>
                   </td>
                   <td>
-                    <textarea type="text" placeholder="Gesamt Zahlen"></textarea>
+                     <textarea class="trainingActivitiesHours" type="text" placeholder="Einzelstunden"></textarea>
                   </td>
                   <td>
-                    <input type="number">
+                     <input class="trainingTotalHours" type="number" placeholder="Gesamtstunden">
                   </td>
                   <td>
-                    <input type="text">
+                     <input class="department" type="text" placeholder="Abteilung">
                   </td>
-                </tr>
-                <tr>
-                <td class="tableWeekDay">Dienstag</td>
-                <td>
-                  <textarea type="text" placeholder="Hier ist deine Textbox"></textarea>
-                </td>
-                <td>
-                  <textarea type="text" placeholder="Gesamt Zahlen"></textarea>
-                </td>
-                <td>
-                  <input type="number">
-                </td>
-                <td>
-                  <input type="text">
-                </td>
-                </tr>
-                <tr>
-                <td class="tableWeekDay">Mittwoch</td>
-                <td>
-                  <textarea type="text" placeholder="Hier ist deine Textbox"></textarea>
-                </td>
-                <td>
-                  <textarea type="text" placeholder="Gesamt Zahlen"></textarea>
-                </td>
-                <td>
-                  <input type="number">
-                </td>
-                <td>
-                  <input type="text">
-                </td>
-                </tr>
-                <tr>
-                <td class="tableWeekDay">Donnerstag</td>
-                <td>
-                  <textarea type="text" placeholder="Hier ist deine Textbox"></textarea>
-                </td>
-                <td>
-                  <textarea type="text" placeholder="Gesamt Zahlen"></textarea>
-                </td>
-                <td>
-                  <input type="number">
-                </td>
-                <td>
-                  <input type="text">
-                </td>
-                </tr>
-                <tr>
-                <td class="tableWeekDay">Freitag</td>
-                <td>
-                  <textarea type="text" placeholder="Hier ist deine Textbox"></textarea>
-                </td>
-                <td>
-                  <textarea type="text" placeholder="Gesamt Zahlen"></textarea>
-                </td>
-                <td>
-                  <input type="number">
-                </td>
-                <td>
-                  <input type="text">
-                </td>
-                </tr>
-                <tr>
-                <td class="tableWeekDay">Samstag</td>
-                <td>
-                  <textarea type="text" placeholder="Hier ist deine Textbox"></textarea>
-                </td>
-                <td>
-                  <textarea type="text" placeholder="Gesamt Zahlen"></textarea>
-                </td>
-                <td>
-                  <input type="number">
-                </td>
-                <td>
-                  <input type="text">
-                </td>
-                </tr>
-                </table>
-            <div class="flexbox">
-                <button type="submit" class="btn">Senden und Abschicken</button>
-                <button type="submit" class="btn">Speichern</button>
-                <button type="submit" class="btn">Abbrechen</button>
+               </tr>
+               <tr class="tableContent">
+                  <td class="tableWeekDay">Dienstag</td>
+                  <td>
+                     <textarea class="trainingActivities" type="text" placeholder="Hier ist deine Textbox"></textarea>
+                  </td>
+                  <td>
+                     <textarea class="trainingActivitiesHours" type="text" placeholder="Einzelstunden"></textarea>
+                  </td>
+                  <td>
+                     <input class="trainingTotalHours" type="number" placeholder="Gesamtstunden">
+                  </td>
+                  <td>
+                     <input class="department" type="text" placeholder="Abteilung">
+                  </td>
+               </tr>
+               <tr class="tableContent">
+                  <td class="tableWeekDay">Mittwoch</td>
+                  <td>
+                     <textarea class="trainingActivities" type="text" placeholder="Hier ist deine Textbox"></textarea>
+                  </td>
+                  <td>
+                     <textarea class="trainingActivitiesHours" type="text" placeholder="Einzelstunden"></textarea>
+                  </td>
+                  <td>
+                     <input class="trainingTotalHours" type="number" placeholder="Gesamtstunden">
+                  </td>
+                  <td>
+                     <input class="department" type="text" placeholder="Abteilung">
+                  </td>
+               </tr>
+               <tr class="tableContent">
+                  <td class="tableWeekDay">Donnerstag</td>
+                  <td>
+                     <textarea class="trainingActivities" type="text" placeholder="Hier ist deine Textbox"></textarea>
+                  </td>
+                  <td>
+                     <textarea class="trainingActivitiesHours" type="text" placeholder="Einzelstunden"></textarea>
+                  </td>
+                  <td>
+                     <input class="trainingTotalHours" type="number" placeholder="Gesamtstunden">
+                  </td>
+                  <td>
+                     <input class="department" type="text" placeholder="Abteilung">
+                  </td>
+               </tr>
+               <tr class="tableContent">
+                  <td class="tableWeekDay">Freitag</td>
+                  <td>
+                     <textarea class="trainingActivities" type="text" placeholder="Hier ist deine Textbox"></textarea>
+                  </td>
+                  <td>
+                     <textarea class="trainingActivitiesHours" type="text" placeholder="Einzelstunden"></textarea>
+                  </td>
+                  <td>
+                     <input class="trainingTotalHours" type="number" placeholder="Gesamtstunden">
+                  </td>
+                  <td>
+                     <input class="department" type="text" placeholder="Abteilung">
+                  </td>
+               </tr>
+               <tr class="tableContent">
+                  <td class="tableWeekDay">Samstag</td>
+                  <td>
+                     <textarea class="trainingActivities" type="text" placeholder="Hier ist deine Textbox"></textarea>
+                  </td>
+                  <td>
+                     <textarea class="trainingActivitiesHours" type="text" placeholder="Einzelstunden"></textarea>
+                  </td>
+                  <td>
+                     <input class="trainingTotalHours" type="number" placeholder="Gesamtstunden">
+                  </td>
+                  <td>
+                     <input class="department" type="text" placeholder="Abteilung">
+                  </td>
+               </tr>
+               <tr class="totalTableContent">
+                  <td class="totalTableContentContent" colspan="3">
+                  </td>
+                  <td class="totalTableContentContent">
+                    <input type="number" value="40" readonly>
+                  </td>
+                  <td class="totalTableContentContent">
+                    <input type="text" value="Adrian Zubi" readonly>
+                  </td>
+               </tr>
+            </table>
+            <div class="btnBox">
+               <button type="submit" class="btn">Speichern und Abschicken</button>
+               <button type="submit" class="btn">Speichern</button>
+               <button type="submit" class="btn">Abbrechen</button>
             </div>
          </form>
       </div>
