--- a/uebersicht/nachweis_uebersicht.html
+++ b/uebersicht/nachweis_uebersicht.html
@@ -21,8 +21,8 @@
                          <input type="search" name="search_field" id="search" placeholder="Search..." >
                         <button id= "search_button" class="search_field"><span>&#9947</span></button>
                     </form>
-                    <button onclick="addTablerow()" class="Button-a">TEST_Neue_Reihe</button>
-                    <button class="Button-b">Button2</button>
+                    <button onclick="addTablerow()" class="Button-a">TESTNeue_Reihe</button>
+                    <button onclick="checkForRowIncrement()" class="Button-b">TEST_Button2</button>
                     <button class="Button-c">Button3</button>
                 </div>
             </div>
@@ -39,7 +39,7 @@
                                 <td id="ausbilder">N.Heim</td>
                                 <td id="date">21.08.2023</td>
                                 <!--img for correct-->
-                                <td id="image_correct"><img src="files/correct.png" alt="GG"></td>
+                                <td id="image"><img src="files/correct.png" alt="GG"></td>
                                 <!--img for wrongt-->
                                 <!--<td id="image_wrong"><img src="files/wrong.png" height="25px" width="25x"></td>-->
                                 <!--img for wrongt-->
