--- a/uebersicht_nachweise/nachweis_uebersicht.html
+++ b/uebersicht_nachweise/nachweis_uebersicht.html
@@ -43,37 +43,41 @@
                         </nav>
                     </header>
             </div>
-            <label>Übersicht deiner Ausbildungsnachweise</label>
-            <div class="buttons-config-div">
-                <form>
-                     <label for="search" class="suchfeld"></label>
-                     <input type="search" name="search_field" id="search" placeholder="Search..." >
-                    <button id= "search_button" class="search_field"><span>&#9947</span></button>
-                </form>
-                <button onclick="addTablerow()" class="Button-a">TESTNeue_Reihe</button>
-                <button onclick="checkForRowIncrement()" class="Button-b">TEST_Button2</button>
-                <button class="Button-c">Button3</button>
-            </div>
+                    <label>Übersicht deiner Ausbildungsnachweise</label>
+                    <div class="buttons-config-div">
+                        <form>
+                             <label for="search" class="suchfeld"></label>
+                             <input type="search" name="search_field" id="search" placeholder="Search..." >
+                            <button id= "search_button" class="search_field"><span>&#9947</span></button>
+                        </form>
+                        <button onclick="addTablerow()" class="btn">TESTNeue_Reihe</button>
+                        <button onclick="checkForRowIncrement()" class="btn">TEST_Button2</button>
+                        <button  class="btn">PENIS</button>
+                    </div>
             </div>
                     <div class="Table_header">
                         <table id="table">
+                            <thead>
                                 <tr>
                                     <th scope="col">Name des Auszubildenden</th>
                                     <th scope="col">Name des Ausbilders</th>
                                     <th scope="col">Datum der Abgabe</th>
                                     <th scope="col">Status</th>
                                 </tr>
-                            <tr class="table-row-content" id="table-content">
-                                <td id="name">Ben Louis Montag</td>
-                                <td id="ausbilder">N.Heim</td>
-                                <td id="date">21.08.2023</td>
-                                <!--img for correct-->
-                                <td id="image"><img src="files/correct.png" alt="GG"></td>
-                                <!--img for wrongt-->
-                                <!--<td id="image_wrong"><img src="files/wrong.png" height="25px" width="25x"></td>-->
-                                <!--img for wrongt-->
-                                <!--<<td id="image_waiting"><img src="files/waiting.png" height="25px" width="25x"></td>-->
-                            </tr>
+                            </thead>
+                            <tbody>
+                                <tr class="table-row-content" id="table-content">
+                                    <td id="name">Ben Louis Montag</td>
+                                    <td id="ausbilder">N.Heim</td>
+                                    <td id="date">21.08.2023</td>
+                                    <!--img for correct-->
+                                    <td id="image"><img src="files/correct.png" alt="GG"></td>
+                                    <!--img for wrongt-->
+                                    <!--<td id="image_wrong"><img src="files/wrong.png" height="25px" width="25x"></td>-->
+                                    <!--img for wrongt-->
+                                    <!--<<td id="image_waiting"><img src="files/waiting.png" height="25px" width="25x"></td>-->
+                                </tr>
+                            </tbody>
                         </table>
                     </div>
         </div>
