nachweise Json weiterarbeit

--- a/Frontend/maintenanceOfTrainingCertificates.html
+++ b/Frontend/maintenanceOfTrainingCertificates.html
@@ -29,7 +29,7 @@
 						<th class="tableHeaderCell">Gesamtstunden</th>
 						<th class="tableHeaderCell">Abteilung</th>
 					</tr>
-						<tr class="tableContent monday">
+						<tr class="tableContent monday top">
 							<td rowspan="2" class="tableWeekDay" id="tableWeekDayMonday" >Montag</td>
 							<td class="activitieContent">
 								<textarea class="trainingActivities" type="text" placeholder="Hier ist deine Textbox"></textarea>
@@ -49,7 +49,7 @@
 							<button onclick="addContentRow('Monday')" class="addRowButton">+</button>
 						</td>
 					</tr>
-						<tr class="tableContent tuesday">
+						<tr class="tableContent tuesday top">
 							<td rowspan="2" class="tableWeekDay" id="tableWeekDayTuesday" >Dienstag</td>
 							<td class="activitieContent">
 								<textarea class="trainingActivities" type="text" placeholder="Hier ist deine Textbox"></textarea>
@@ -69,7 +69,7 @@
 							<button onclick="addContentRow('Tuesday')" class="addRowButton">+</button>
 						</td>
 					</tr>
-						<tr class="tableContent wednesday">
+						<tr class="tableContent wednesday top">
 							<td rowspan="2" class="tableWeekDay" id="tableWeekDayWednesday" >Mittwoch</td>
 							<td class="activitieContent">
 								<textarea class="trainingActivities" type="text" placeholder="Hier ist deine Textbox"></textarea>
@@ -89,7 +89,7 @@
 							<button onclick="addContentRow('Wednesday')" class="addRowButton">+</button>
 						</td>
 					</tr>
-						<tr class="tableContent thursday">
+						<tr class="tableContent thursday top">
 							<td rowspan="2" class="tableWeekDay" id="tableWeekDayThursday" >Donnerstag</td>
 							<td class="activitieContent">
 								<textarea class="trainingActivities" type="text" placeholder="Hier ist deine Textbox"></textarea>
@@ -109,7 +109,7 @@
 							<button onclick="addContentRow('Thursday')" class="addRowButton">+</button>
 						</td>
 					</tr>
-						<tr class="tableContent friday">
+						<tr class="tableContent friday top">
 							<td rowspan="2" class="tableWeekDay" id="tableWeekDayFriday" >Freitag</td>
 							<td class="activitieContent">
 								<textarea class="trainingActivities" type="text" placeholder="Hier ist deine Textbox"></textarea>
@@ -129,7 +129,7 @@
 							<button onclick="addContentRow('Friday')" class="addRowButton">+</button>
 						</td>
 					</tr>
-						<tr class="tableContent saturday">
+						<tr class="tableContent saturday top">
 							<td rowspan="2" class="tableWeekDay" id="tableWeekDaySaturday" >Samstag</td>
 							<td class="activitieContent">
 								<textarea class="trainingActivities" type="text" placeholder="Hier ist deine Textbox"></textarea>
