--- a/uebersicht_azubis/azubi_uebersicht.html
+++ b/uebersicht_azubis/azubi_uebersicht.html
@@ -25,7 +25,7 @@
                             <ul class="navbar-nav">
                                 <li class="nav-item"><a href="#">Startseite</a>
                                     <ul class="submenu">
-                                        <li class="nav-submenu-item"><a href="#">Abmelden</a></li>
+                                        <li class="nav-submenu-item"><a  id="abmeldenAnmeldenID" href="#">Abmelden</a></li>
                                     </ul>
                                 </li>
                                 <li class="nav-item"><a href="#">Nachweise</a>
