--- a/uebersicht_azubis/azubi_uebersicht.html
+++ b/uebersicht_azubis/azubi_uebersicht.html
@@ -11,8 +11,10 @@
     <link rel="stylesheet" href="../nav_bar/navbarcss.css">
     <script src="../uebersicht_nachweise/script.js"></script>
     <script src="../uebersicht_azubis/azubi_view_scripts.js"></script>
+    <script src="../uebersicht_nachweise/fetchapi.js"></script>
 </head>
-<body>
+<!--<body onload="testFetchJsoNP('http://10.133.14.146:8080/session')">-->
+<body onload="fetchSession()">
 <div class="overview-table_header">
         <div class="h1+bg">
             <div class="tableBackground">
@@ -25,7 +27,7 @@
                             <ul class="navbar-nav">
                                 <li class="nav-item"><a href="#">Startseite</a>
                                     <ul class="submenu">
-                                        <li class="nav-submenu-item"><a  id="abmeldenAnmeldenID" href="#">Abmelden</a></li>
+                                        <li id="blablabla" class="nav-submenu-item"><a  id="link"  onclick="createUser()"  href="#">Abmelden</a></li>
                                     </ul>
                                 </li>
                                 <li class="nav-item"><a href="#">Nachweise</a>
@@ -53,7 +55,7 @@
                         <form>
                              <label for="search" class="suchfeld"></label>
                              <input type="search" name="search_field" id="search" placeholder="Search..." >
-                            <button id= "search_button" class="search_field"><span>&#9947</span></button>
+                            <button id= "search_button"  onclick="fetchSession()" class="search_field"><span>&#9947</span></button>
                         </form>
                         <button id="button1" onclick="addTablerowForAzubiView()" class="btn">Auszubildenden erstellen</button>
                         <button id="button2" onclick="checkForRowIncrement()" class="btn">Auszubildenden Löschen</button>
