Addded Error Message

--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -24,6 +24,9 @@
 			</div>
 			<button type="submit" class="btn">Login</button>
          </form>
+         <label class="errorMessage" id="errorLabel">
+            Anmeldung Fehlgeschlagen
+         </label>
       </div>
    </body>
 </html>
