--- a/Frontend/maintenanceOfTrainingCertificates.html
+++ b/Frontend/maintenanceOfTrainingCertificates.html
@@ -8,18 +8,18 @@
 	<body>
 		<div class="trainingCertificate-wrapper">
 				<label for="studentName">Name des/der Auszubildenen:</label>
-				<input type="text" id="studentName" value="Adrian Zubi" readonly>
+				<input type="text" id="studentName" readonly>
 				<div class="flexbox">
 					<label for="trainingYear">Ausbildungsjahr:</label>
-					<input type="number" id="trainingYear" value="3">
-					<label for="department">Name des/der Auszubildenen:</label>
-					<input type="text" id="department" value="IT">
+					<input type="number" id="trainingYear" readonly>
+					<label for="trainingName">Ausbildungs Beruf:</label>
+					<input type="text" id="trainingName" readonly>
 				</div>
 				<div class="flexbox">
 					<label for="trainingWeekStart">Ausbildungswoche vom:</label>
-					<input type="date" id="trainingWeekStart" value="2023-01-12">
+					<input type="date" id="trainingWeekStart" readonly>
 					<label for="trainingWeekEnd">bis:</label>
-					<input type="date" id="trainingWeekEnd" value="2023-01-18">
+					<input type="date" id="trainingWeekEnd" readonly>
 				</div>
 				<table class="trainingCertificateTable" id="trainingCertificateTable">
 					<tr class="tableHeader">
@@ -153,17 +153,17 @@
 						<td class="totalTableContentContent" colspan="3">
 						</td>
 						<td class="totalTableContentContent">
-							<input type="number" value="40" readonly>
+							<input type="number" value="40">
 						</td>
 						<td class="totalTableContentContent">
-							<input type="text" value="Adrian Zubi" readonly>
+							<input type="text" value="Adrian Zubi">
 						</td>
 					</tr>
 				</table>
 				<div class="btnBox">
-					<button onclick="GetCertificateAsJson()" class="btn">Speichern und Abschicken</button>
-					<button class="btn">Speichern</button>
-					<button class="btn">Abbrechen</button>
+					<button onclick="GetCertificateAsJson(true)" class="btn">Speichern und Abschicken</button>
+					<button onclick="GetCertificateAsJson(false)" class="btn">Speichern</button>
+					<button onclick="GoToOverview()" class="btn">Abbrechen</button>
 				</div>
 		</div>
 	</body>
