--- a/uebersicht_azubis/azubi_uebersicht.html
+++ b/uebersicht_azubis/azubi_uebersicht.html
@@ -57,8 +57,8 @@
                              <input type="search" name="search_field" id="search" placeholder="Search..." >
                             <button id= "search_button"  onclick="fetchSession()" class="search_field"><span>&#9947</span></button>
                         </form>
-                        <button id="button1" onclick="addTablerowForAzubiView()" class="btn">Auszubildenden erstellen</button>
-                        <button id="button2" onclick="checkForRowIncrement()" class="btn">Auszubildenden Löschen</button>
+                        <button id="button1" onclick="createUser()" class="btn">Auszubildenden erstellen</button>
+                        <button id="button2" onclick="" class="btn">Auszubildenden Löschen</button>
                         <button id="button3" class="btn">Ω</button>
                     </div>
             </div>
