--- a/Frontend/maintenanceOfTrainingCertificates.html
+++ b/Frontend/maintenanceOfTrainingCertificates.html
@@ -4,8 +4,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="mainStyle.css">
 	<link rel="stylesheet" href="trainingCertificateStyle.css">
+	<link rel="stylesheet" href="navbarStyle.css">
 	<script src="tainingCertificate.js"></script>
+	<script src="navbar.js"></script>
 	<body>
+		<nav class="navbar" id="navbarList">
+		</nav>
+		<hr>
 		<div class="trainingCertificate-wrapper">
 				<label for="studentName">Name des/der Auszubildenen:</label>
 				<input type="text" id="studentName" readonly>
