--- a/Frontend/mangmentAndConfiguration.html
+++ b/Frontend/mangmentAndConfiguration.html
@@ -4,8 +4,13 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="mainStyle.css">
    <link rel="stylesheet" href="mangmentAndConfigurationStyle.css">
+   <link rel="stylesheet" href="navbarStyle.css">
    <script src="mangmentAndConfiguration.js"></script>
+   <script src="navbar.js"></script>
    <body>
+    <nav class="navbar" id="navbarList">
+    </nav>
+    <hr>
     <div class="mangmentAndConfiguration-wrapper">
         <form class="createUser-wrapper" id="createUserForm">
             <h1>Nutzer anlegen</h1>
