--- a/uebersicht_azubis/azubi_uebersicht.html
+++ b/uebersicht_azubis/azubi_uebersicht.html
@@ -12,6 +12,8 @@
     <script src="../uebersicht_nachweise/script.js"></script>
     <script src="../uebersicht_azubis/azubi_view_scripts.js"></script>
     <script src="../uebersicht_nachweise/fetchapi.js"></script>
+    <script src="../Frontend/roleHandler.js"></script>
+    <script src="../Frontend/navbar.js"></script>
 </head>
 <!--<body onload="testFetchJsoNP('http://10.133.14.146:8080/session')">-->
 <body onload="fetchSession()">
