--- a/Frontend/maintenanceOfTrainingCertificates.html
+++ b/Frontend/maintenanceOfTrainingCertificates.html
@@ -12,8 +12,10 @@
 		</nav>
 		<hr>
 		<div class="trainingCertificate-wrapper">
-				<label for="studentName">Name des/der Auszubildenen:</label>
-				<input type="text" id="studentName" readonly>
+				<div class="flexbox">
+					<label for="studentName">Name des/der Auszubildenen:</label>
+					<input type="text" id="studentName" readonly>
+				</div>
 				<div class="flexbox">
 					<label for="trainingYear">Ausbildungsjahr:</label>
 					<input type="number" id="trainingYear" readonly>
