--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -6,7 +6,7 @@
    <link rel="stylesheet" href="loginStyle.css">
    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
    <script src="login.js"></script>
-   <script src="roleHandler.js"></script>
+   <script src="storageHandler.js"></script>
    <script src="const.js"></script>
    <body>
       <div class="login-wrapper">
