--- a/Frontend/maintenanceOfTrainingCertificates.html
+++ b/Frontend/maintenanceOfTrainingCertificates.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="navbarStyle.css">
 	<script src="tainingCertificate.js"></script>
 	<script src="navbar.js"></script>
+	<script src="storageHandler.js"></script>
 	<body>
 		<nav class="navbar" id="navbarList">
 		</nav>
