--- a/Frontend/azubi_uebersicht.html
+++ b/Frontend/azubi_uebersicht.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../Frontend/mainStyle.css">
     <link rel="stylesheet" href="ubersicht_azubis_style.css">
-    <link rel="stylesheet" href="../uebersicht_nachweise/ubersicht_style.css">
+    <link rel="stylesheet" href="ubersicht_style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../nav_bar/navbarcss.css">
-    <link rel="stylesheet" href="../Frontend/navbarStyle.css">
-    <script src="../uebersicht_nachweise/script.js"></script>
-    <script src="../uebersicht_azubis/azubi_view_scripts.js"></script>
-    <script src="../uebersicht_nachweise/fetchapi.js"></script>
-    <script src="../Frontend/roleHandler.js"></script>
-    <script src="../Frontend/navbar.js"></script>
+    <link rel="stylesheet" href="navbarStyle.css">
+    <script src="script.js"></script>
+    <script src="azubi_view_scripts.js"></script>
+    <script src="fetchapi.js"></script>
+    <script src="roleHandler.js"></script>
+    <script src="navbar.js"></script>
 </head>
 <!--<body onload="testFetchJsoNP('http://10.133.14.146:8080/session')">-->
 <body>
