--- a/Frontend/nachweis_uebersicht.html
+++ b/Frontend/nachweis_uebersicht.html
@@ -5,10 +5,16 @@
     <title>Übersicht | Ausbildungsnachweise</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../Frontend/mainStyle.css">
+    <link rel="stylesheet" href="ubersicht_azubis_style.css">
     <link rel="stylesheet" href="ubersicht_style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../nav_bar/navbarcss.css">
+    <link rel="stylesheet" href="navbarStyle.css">
     <script src="script.js"></script>
+    <script src="azubi_view_scripts.js"></script>
+    <script src="fetchapi.js"></script>
+    <script src="roleHandler.js"></script>
+    <script src="navbar.js"></script>
 </head>
 <body>
 <div class="overview-table_header">
